--- a/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Points League</string>
+    <string name="QRDescription">display QRCode</string>
+    <string name="BarCodeDescription">display BarCode</string>
+    <string name="need_points">消费积分：</string>
 </resources>
