--- a/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="need_points">消费积分：</string>
     <string name="paying_success">抵扣成功</string>
     <string name="Button_Paying">确认抵扣</string>
+    <string name="about_us_description">Points League旨在建立一个以花旗银行信用为担保的积分兑换平台，实现花旗银行及其友商客户群体的互通，打破各友商积分使用的局限，有助于其积分业务的有效合理互通，扩大消费者积分使用范围及其友商的社会影响力。</string>
+    <string name="about_us">武汉大学计算机学院</string>
+    <string name="about_us_2">武汉大学经管学院</string>
 </resources>
