--- a/接口需求.md
+++ b/接口需求.md
@@ -1,15 +1,11 @@
 # 接口
-- 添加会员卡
-	- 返回：是否成功
+- 添加会员卡(已完成)
+	- 返回：成功：{"state":true}，失败：{"state":false}
 - 解绑会员卡
-
-	- 返回：是否成功
-- 商户广告
-	- 返回：广告图像url
-
+    - cardID
+	- 返回：成功：{"state":true}，失败：{"state":false}
 	
-- 本地活动
-	- 返回：优惠活动信息（比如：商家、优惠活动详情等）
+
 
 - 线上优惠券
 	- 返回：优惠券信息（比如：商家、优惠券信息（优惠内容，点数等））
@@ -26,3 +22,9 @@
 - 历史订单
 
 	- 返回：订单日期、商家、优惠信息、是否已使用
+- 商户广告
+	- 返回：广告图像url
+
+	
+- 本地活动
+	- 返回：优惠活动信息（比如：商家、优惠活动详情等）
