--- a/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="about_us_2">武汉大学经管学院</string>
 
     <string name="action_search">Search</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
