修改了两个bug

--- a/后台代码待办列表.md
+++ b/后台代码待办列表.md
@@ -12,10 +12,12 @@ citi:
 citiMerchant:
 
 1. 图片上传路径与访问的url的问题，需要在服务器上调配
-2. 修改商品信息的时候存在可以改id的bug
+2. 修改商品信息的时候存在可以改id的bug（已完成）
 3. 策略清单最好按照需满金额从小到大的顺序呈现
-4. 从历史订单跳到商户信息界面有问题
+4. 从历史订单跳到商户信息界面有问题（已完成）
 5. 商户还有活动等属性要不要在商户信息这里加上？
 6. 头像logo和商户信息要显示。
 7. 需不需要加上汇率的协商？
+8. 统计信息页面待做
+9. 商户图片上传的问题的解决方案
 
