可兑换通用积分接口添加

--- a/后台代码待办列表.md
+++ b/后台代码待办列表.md
@@ -7,7 +7,7 @@ citi:
 5. 支付模块前后台的交互
 6. 支付模块可能要调用花旗的接口
 7. 缺乏接口：获取单张卡的积分兑换记录
-8. 这里获取的积分不是实时的，需要先更新![](https://i.imgur.com/s7iqcAJ.png)
+8. (已完成)这里获取的积分不是实时的，需要先更新![](https://i.imgur.com/s7iqcAJ.png)
 
 citiMerchant:
 
