--- a/后台代码待办列表.md
+++ b/后台代码待办列表.md
@@ -1,12 +1,12 @@
 citi:
 
-1. 在绑卡的过程中userID怎么获取
+1. 在绑卡的过程中userID怎么获取（已完成）
 2. 绑卡成功的返回页面还没有做
 3. 解绑接口没有测试
 4. 需要模拟商家绑定的接口
 5. 支付模块前后台的交互
 6. 支付模块可能要调用花旗的接口
-7. 缺乏接口：获取单张卡的积分兑换记录
+7. 缺乏接口：获取单张卡的积分兑换记录（已完成）
 8. (已完成)这里获取的积分不是实时的，需要先更新![](https://i.imgur.com/s7iqcAJ.png)
 
 citiMerchant:
