新增item部分接口

--- a/后台代码待办列表.md
+++ b/后台代码待办列表.md
@@ -8,7 +8,8 @@ citi:
 6. 支付模块可能要调用花旗的接口
 7. 缺乏接口：获取单张卡的积分兑换记录（已完成）
 8. (已完成)这里获取的积分不是实时的，需要先更新![](https://i.imgur.com/s7iqcAJ.png)
-9.反馈
+9. 反馈
+10. 历史订单merchantName
 citiMerchant:
 
 1. 图片上传路径与访问的url的问题，需要在服务器上调配
